# gpgpu

./: GPGPU_A7.cpp  README.md  kernel.cu  main.c  main2.c  matMultHost.c
Aufgabe10_GPGPU/: CMakeLists.txt
Aufgabe10_GPGPU/A10_CUDA_OpenCL_InterOp/: CMakeLists.txt  cudaKernel.cu  cudaKernel.h  cudaOpenCV.cu  main.cpp
Aufgabe10_GPGPU/Dependencies/: CMakeLists.txt
Aufgabe10_GPGPU/Dependencies/AntTweakBar/: CMakeLists.txt
Aufgabe10_GPGPU/Dependencies/AntTweakBar/src/: TwMgr.cpp
Aufgabe10_GPGPU/Dependencies/FreeImage/: CMakeLists.txt
Aufgabe10_GPGPU/Dependencies/FreeImage/Source/FreeImage/: Plugin.cpp
Aufgabe10_GPGPU/Dependencies/GLTools/include/: GLFrustum.h
Aufgabe10_GPGPU/Dependencies/GLTools/src/: GLBatch.cpp
Aufgabe10_GPGPU/Dependencies/OpenCV/lib/Debug/: opencv_core340d.exp  opencv_core340d.lib  opencv_highgui340d.exp  opencv_highgui340d.lib  opencv_imgcodecs340d.exp  opencv_imgcodecs340d.lib  opencv_imgproc340d.exp  opencv_imgproc340d.lib  opencv_video340d.exp  opencv_video340d.lib  opencv_videoio340d.exp  opencv_videoio340d.lib
Aufgabe10_GPGPU/cmake/: CreateLaunchers.cmake  Dependencies.cmake
GPUAufgabe3/: GPUAufgabe3.vcxproj  matMultCUDA.cu
GPUAufgabe3/x64/Debug/: kernel.cu.cache  matMultCUDA.cu.cache  matMultHost.cu.cache  matMultHost.cu1199759772.deps
GPUAufgabe3/x64/Debug/GPUAufgabe3.tlog/: GPUAufgabe3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCVReadVideo/: OpenCVReadVideo.sln
OpenCVReadVideo/OpenCV/include/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
OpenCVReadVideo/OpenCV/vc14/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_calib3d340.lib  opencv_calib3d340d.lib  opencv_core340.lib  opencv_core340d.lib  opencv_dnn340.lib  opencv_dnn340d.lib  opencv_features2d340.lib  opencv_features2d340d.lib  opencv_flann340.lib  opencv_flann340d.lib  (+24 more)
OpenCVReadVideo/OpenCVReadVideo/: OpenCVReadVideo.cpp  OpenCVReadVideo.vcxproj  OpenCVReadVideo.vcxproj.filters  ReadMe.txt  kernel.cu  stdafx.cpp
OpenCVReadVideo/Videos/: Thumbs.db
OpenCVReadVideo/x64/Debug/: OpenCVReadVideo.ilk  kernel.cu.cache  kernel.cu1200650896.deps  vc140.idb
(+7 files in other folders)
